# torchcu

./: .gitignore  README.md  arena.py  example.cu  generate.py  generator.py  judge.py  pyproject.toml  requirements.txt  runner.py  warp_test.py
dataset_v2/: example_0.txt  example_1.txt  example_10.txt  example_100.txt  example_101.txt  example_102.txt  example_103.txt  example_104.txt  example_105.txt  example_106.txt  example_107.txt  example_108.txt  example_109.txt  example_11.txt  example_110.txt  example_111.txt  example_112.txt  example_113.txt  example_114.txt  example_115.txt  example_116.txt  example_117.txt  example_118.txt  example_119.txt  example_12.txt  example_120.txt  example_121.txt  example_122.txt  example_123.txt  example_124.txt  example_125.txt  example_126.txt  example_127.txt  example_128.txt  example_129.txt  example_13.txt  example_130.txt  example_131.txt  example_132.txt  example_133.txt  (+497 more)
generate_pair_dataset/: call_gemini.py  preprocess.py
generator/: __init__.py  example_models.py  linter.py  llm.py  pipeline.py
gf_dataset/: example_0.cu  example_0.py  example_1.cu  example_1.py  example_10.cu  example_10.py  example_100.cu  example_100.py  example_101.cu  example_101.py  example_102.cu  example_102.py  example_103.cu  example_103.py  example_104.cu  example_104.py  example_105.cu  example_105.py  example_106.cu  example_106.py  example_107.cu  example_107.py  example_108.cu  example_108.py  example_109.cu  example_109.py  example_11.cu  example_11.py  example_110.cu  example_110.py  example_111.cu  example_111.py  example_112.cu  (+869 more)
(+1007 files in other folders)
